Adjust size of rings to fix plane overlaps

--- a/cryptex/style.css
+++ b/cryptex/style.css
@@ -109,145 +109,145 @@ body {
 
 /* ---------- ring styles ------------- */
 .ring > .a {
-  transform: rotateX(0deg) translateZ(180px);
+  transform: rotateX(0deg) translateZ(204px);
 }
 
 .ring > .b {
-  transform: rotateX(350deg) translateZ(180px);
+  transform: rotateX(350deg) translateZ(204px);
 }
 
 .ring > .c {
-  transform: rotateX(340deg) translateZ(180px);
+  transform: rotateX(340deg) translateZ(204px);
 }
 
 .ring > .d {
-  transform: rotateX(330deg) translateZ(180px);
+  transform: rotateX(330deg) translateZ(204px);
 }
 
 .ring > .e {
-  transform: rotateX(320deg) translateZ(180px);
+  transform: rotateX(320deg) translateZ(204px);
 }
 
 .ring > .f {
-  transform: rotateX(310deg) translateZ(180px);
+  transform: rotateX(310deg) translateZ(204px);
 }
 
 .ring > .g {
-  transform: rotateX(300deg) translateZ(180px);
+  transform: rotateX(300deg) translateZ(204px);
 }
 
 .ring > .h {
-  transform: rotateX(290deg) translateZ(180px);
+  transform: rotateX(290deg) translateZ(204px);
 }
 
 .ring > .i {
-  transform: rotateX(280deg) translateZ(180px);
+  transform: rotateX(280deg) translateZ(204px);
 }
 
 .ring > .j {
-  transform: rotateX(270deg) translateZ(180px);
+  transform: rotateX(270deg) translateZ(204px);
 }
 
 .ring > .k {
-  transform: rotateX(260deg) translateZ(180px);
+  transform: rotateX(260deg) translateZ(204px);
 }
 
 .ring > .l {
-  transform: rotateX(250deg) translateZ(180px);
+  transform: rotateX(250deg) translateZ(204px);
 }
 
 .ring > .m {
-  transform: rotateX(240deg) translateZ(180px);
+  transform: rotateX(240deg) translateZ(204px);
 }
 
 .ring > .n {
-  transform: rotateX(230deg) translateZ(180px);
+  transform: rotateX(230deg) translateZ(204px);
 }
 
 .ring > .o {
-  transform: rotateX(220deg) translateZ(180px);
+  transform: rotateX(220deg) translateZ(204px);
 }
 
 .ring > .p {
-  transform: rotateX(210deg) translateZ(180px);
+  transform: rotateX(210deg) translateZ(204px);
 }
 
 .ring > .q {
-  transform: rotateX(200deg) translateZ(180px);
+  transform: rotateX(200deg) translateZ(204px);
 }
 
 .ring > .r {
-  transform: rotateX(190deg) translateZ(180px);
+  transform: rotateX(190deg) translateZ(204px);
 }
 
 .ring > .s {
-  transform: rotateX(180deg) translateZ(180px);
+  transform: rotateX(180deg) translateZ(204px);
 }
 
 .ring > .t {
-  transform: rotateX(170deg) translateZ(180px);
+  transform: rotateX(170deg) translateZ(204px);
 }
 
 .ring > .u {
-  transform: rotateX(160deg) translateZ(180px);
+  transform: rotateX(160deg) translateZ(204px);
 }
 
 .ring > .v {
-  transform: rotateX(150deg) translateZ(180px);
+  transform: rotateX(150deg) translateZ(204px);
 }
 
 .ring > .w {
-  transform: rotateX(140deg) translateZ(180px);
+  transform: rotateX(140deg) translateZ(204px);
 }
 
 .ring > .x {
-  transform: rotateX(130deg) translateZ(180px);
+  transform: rotateX(130deg) translateZ(204px);
 }
 
 .ring > .y {
-  transform: rotateX(120deg) translateZ(180px);
+  transform: rotateX(120deg) translateZ(204px);
 }
 
 .ring > .z {
-  transform: rotateX(110deg) translateZ(180px);
+  transform: rotateX(110deg) translateZ(204px);
 }
 
 .ring > .zero {
-  transform: rotateX(100deg) translateZ(180px);
+  transform: rotateX(100deg) translateZ(204px);
 }
 
 .ring > .one {
-  transform: rotateX(90deg) translateZ(180px);
+  transform: rotateX(90deg) translateZ(204px);
 }
 
 .ring > .two {
-  transform: rotateX(80deg) translateZ(180px);
+  transform: rotateX(80deg) translateZ(204px);
 }
 
 .ring > .three {
-  transform: rotateX(70deg) translateZ(180px);
+  transform: rotateX(70deg) translateZ(204px);
 }
 
 .ring > .four {
-  transform: rotateX(60deg) translateZ(180px);
+  transform: rotateX(60deg) translateZ(204px);
 }
 
 .ring > .five {
-  transform: rotateX(50deg) translateZ(180px);
+  transform: rotateX(50deg) translateZ(204px);
 }
 
 .ring > .six {
-  transform: rotateX(40deg) translateZ(180px);
+  transform: rotateX(40deg) translateZ(204px);
 }
 
 .ring > .seven {
-  transform: rotateX(30deg) translateZ(180px);
+  transform: rotateX(30deg) translateZ(204px);
 }
 
 .ring > .eight {
-  transform: rotateX(20deg) translateZ(180px);
+  transform: rotateX(20deg) translateZ(204px);
 }
 
 .ring > .nine {
-  transform: rotateX(10deg) translateZ(180px);
+  transform: rotateX(10deg) translateZ(204px);
 }
